# intent-poc

./: app.py  app_trained.py  model_loader.py  pyproject.toml  requirements.txt  token_counter.py
code/: intent_dataset.csv  train.ipynb
code/new/: train.py
results/checkpoint-30/: config.json  trainer_state.json
trained_albert_intent_classifier/: config.json
